k8s/redis.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: colossus-redis-cluster
spec:
  selector:
    matchLabels:
      app: redis
      role: main
      tier: backend
  replicas: 5
  template:
    metadata:
      labels:
        app: redis
        role: main
        tier: backend
    spec:
      containers:
      - name: main
        image: k8s.gcr.io/redis:e2e
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: colossus-redis-cluster
  labels:
    app: redis
    role: main
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: main
    tier: backend
